--- a/rfidQbe/src/app/home/home.page.scss
+++ b/rfidQbe/src/app/home/home.page.scss
@@ -1,1 +1,20 @@
+.overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 100000;
+    width:100%;
+    background-color:black;
+    opacity: 0.3;
 
+ }
+ .modal{
+   background-color:white;
+   width:80%;
+   height:80%;
+   opacity:1;
+   display:block;
+ }
+ 
